--- a/css/styles.css
+++ b/css/styles.css
@@ -1009,6 +1009,10 @@ video{
 
 
 @media(max-width: 426px){
+    .whats {
+        bottom: 20px;
+        right: 20px; 
+    }
     .whats img {
         width: 50px;
         height: 50px;
