add display none to scroll

--- a/css/styles.css
+++ b/css/styles.css
@@ -1074,3 +1074,9 @@ video{
   
   
   /* Barra de Rolagem */
+
+  @media(max-width: 768px) {
+    ::-webkit-scrollbar {
+        display: none; 
+    }
+}
