--- a/css/styles.css
+++ b/css/styles.css
@@ -363,13 +363,19 @@ header{
     height: 396px;
     object-fit: cover;
     margin-top: 60px;
+    border-radius: 10px;
 }
-
-
+.about_1_line {
+    width: 60px;
+    height: 2px;
+    background-color: #0808FF;
+    margin-bottom: 320px;
+    margin-left: 20px;
+}
 .about_1_text{
     max-width: 350px;
     width: 100%;
-    margin-left: 98px;
+    margin-left: 50px;
     margin-bottom: 5px;
 }
 
@@ -420,11 +426,18 @@ header{
     margin-top: 60px;
 }
 
+.about_2_line {
+    width: 60px;
+    height: 2px;
+    background-color: #0808FF;
+    margin-bottom: 320px;
+    margin-left: 20px;
+}
 
 .about_2_text{
     max-width: 400px;
     width: 100%;
-    margin-left: 98px;
+    margin-left: 50px;
     margin-bottom: 5px;
 }
 
@@ -493,6 +506,14 @@ video{
     .about_1_image img{
         width: 100%;
         height: 396px;
+    }
+    
+    .about_1_line{
+       margin: 20px 0;
+    }
+
+    .about_2_line {
+        margin: 5px 0 30px 0;
     }
 
 }
