--- a/css/styles.css
+++ b/css/styles.css
@@ -1133,6 +1133,10 @@ video{
         font-size: 35px;
         max-width: 100%;
     }
+
+    .water_text p{
+        padding: 0 30px;
+    }
     
 }
 
@@ -1142,7 +1146,6 @@ video{
     }
     .water_text p {
         font-size: 14px;
-        padding: 0 10px;
     }
 
     .swiper-slide img {
