--- a/css/privacy.css
+++ b/css/privacy.css
@@ -1,19 +1,28 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
 * {
+      
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
+    font-family: "Oswald", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    scroll-behavior: smooth;
   }
-  
-  body {
-    font-family: Arial, sans-serif;
+
+  html{
+    
+    background: #090B10;
   }
   
   .container {
     padding: 20px;
-    background: #090B10;
     border-radius: 8px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-    height: 100vh;
+    height: auto;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -24,6 +33,7 @@
     background-color: #163283;
     border-radius: 10px;
     padding: 30px 30px 10px 30px;
+
   }
   
   .title {
